// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessWallet renders 1`] = `
<Section>
  <Other
    onDone={[Function]}
    type="LedgerWebUSB"
  />
</Section>
`;

exports[`AccessWallet renders 2`] = `
<Section>
  <MnemonicPhrase
    onDone={[Function]}
    type="MnemonicPhrase"
  />
</Section>
`;
